--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sample App</title>
+    <style>
+
+    </style>
 </head>
+
 <body>
-    
+    <p>This is the template</p>
 </body>
 </html>
